<resources>
    <string name="app_name">gameday</string>
    <string name="ui_mode">Light</string>
    <string name="page_title">gameday</string>
    <string name="placeholder">Placeholder</string>
    <string name="content_placeholder">Placeholder Description</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_forgot_password">Reset Password</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="register">Need an account? Sign up here.</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address_hint">Email address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="cancel">Cancel</string>
    <string name="fab_add_statistic_desc">Add new statistic</string>
    <string name="fab_update_desc">Update daily statistics</string>
    <string name="title_activity_daily_update">Update Daily Progress</string>
    <string name="ok">OK</string>
    <string name="gameday_logo">gameday logo</string>
    <string name="forgot_password_title">forgot password</string>
    <string name="sign_up_title">sign up</string>
    <string name="season_overview">this season</string>
    <string name="page_overview">Overview</string>
    <string name="page_history">History</string>
    <string name="page_daily_update">Today</string>
    <string name="page_settings">Settings</string>
</resources>